--- a/app/src/main/res/layout/activity_all_contacts.xml
+++ b/app/src/main/res/layout/activity_all_contacts.xml
@@ -33,13 +33,26 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" />
+                android:orientation="vertical">
+
+                <ListView
+                    android:id="@+id/allContacts"
+                    android:layout_width="match_parent"
+                    android:layout_height="694dp" />
+            </LinearLayout>
         </ScrollView>
 
-        <ListView
-            android:id="@+id/allListView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_newItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:onClick="onClick"
+        android:text="노래 등록"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
