--- a/app/src/main/res/layout/activity_insert_contact.xml
+++ b/app/src/main/res/layout/activity_insert_contact.xml
@@ -32,13 +32,15 @@
 
     <EditText
         android:id="@+id/et_insertContent"
-        android:layout_width="379dp"
-        android:layout_height="250dp"
+        android:layout_width="0dp"
+        android:layout_height="300dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="내용"
         android:inputType="text"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_insertArtist" />
 
@@ -59,6 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="16dp"
+        android:onClick="onClick"
         android:text="취소"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
